conf: pomp configuracion